--- a/metager/package.json
+++ b/metager/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "chart.js": "^3.7.1",
     "es6-promise": "^4.2.8",
-    "fetch-ie8": "^1.5.0"
+    "fetch-ie8": "^1.5.0",
+    "js-cookie": "^3.0.5"
   }
 }
