--- a/metager/composer.json
+++ b/metager/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "endroid/qr-code": "^4.8",
         "globalcitizen/php-iban": "^4.1.0",
         "guzzlehttp/guzzle": "^7.2",
         "jenssegers/agent": "^2.6.4",
@@ -18,6 +19,7 @@
         "mcamara/laravel-localization": "1.7.0",
         "mews/captcha": "^3.2.7",
         "promphp/prometheus_client_php": "^2.6.0",
+        "smhg/sepa-qr-data": "^1.2",
         "symfony/dom-crawler": "^6.0",
         "tio/laravel": "^1.20",
         "vizir/laravel-keycloak-web-guard": "^3.0"
