--- a/metager/composer.json
+++ b/metager/composer.json
@@ -25,13 +25,14 @@
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.13",
         "fakerphp/faker": "^1.9.1",
+        "laravel/dusk": "^7.8",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
+        "php-webdriver/webdriver": "^1.12.1",
         "phpunit/phpunit": "^10.1",
-        "spatie/laravel-ignition": "^2.0",
-        "php-webdriver/webdriver": "^1.12.1"
+        "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
         "psr-4": {
