--- a/metager/package.json
+++ b/metager/package.json
@@ -22,6 +22,7 @@
     "chart.js": "^3.7.1",
     "es6-promise": "^4.2.8",
     "fetch-ie8": "^1.5.0",
-    "js-cookie": "^3.0.5"
+    "js-cookie": "^3.0.5",
+    "masonry-layout": "^4.2.2"
   }
 }
