--- a/metager/package.json
+++ b/metager/package.json
@@ -23,6 +23,7 @@
     "es6-promise": "^4.2.8",
     "fetch-ie8": "^1.5.0",
     "js-cookie": "^3.0.5",
-    "macy": "^2.5.1"
+    "macy": "^2.5.1",
+    "moment": "^2.29.4"
   }
 }
