--- a/.gitlab/review.yaml
+++ b/.gitlab/review.yaml
@@ -1,7 +1,7 @@
 ingress:
   annotations:
     kubernetes.io/tls-acme: "true"
-    cert-manager.io/cluster-issuer: letsencrypt-prod
+    cert-manager.io/cluster-issuer: letsencrypt-dns
   hosts:
     - paths:
         - path: /
