prevent collision with PROXY_PASSWORD variable

--- a/metager/.env.example
+++ b/metager/.env.example
@@ -47,5 +47,5 @@ BROWSERSTACK_BROWSER=WINDOWS_10_FIREFOX
 BROWSERSTACK_SEPARATE_SESSIONS=true
 
 SELENIUM_HOST=selenium_standalone_firefox
-#PROXY_HOST=
-#PROXY_PORT=
+#FETCHER_PROXY_HOST=host.docker.internal
+#FETCHER_PROXY_PORT=8081
