--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -101,7 +101,7 @@ spec:
             periodSeconds: 1
           resources:
             requests:
-              cpu: 700m
+              cpu: 1
               memory: 500M
             limits:
         - name: scheduler
