--- a/metager/composer.json
+++ b/metager/composer.json
@@ -9,19 +9,20 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "endroid/qr-code": "^4.8",
+        "globalcitizen/php-iban": "^4.1.0",
         "jenssegers/agent": "^2.6.4",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "mcamara/laravel-localization": "1.8.0",
-        "endroid/qr-code": "^4.8",
-        "globalcitizen/php-iban": "^4.1.0",
         "mews/captcha": "^3.3.2",
+        "mlocati/ip-lib": "^1",
+        "predis/predis": "^2.2",
         "promphp/prometheus_client_php": "^2.7.1",
         "smhg/sepa-qr-data": "^1.2",
         "symfony/dom-crawler": "^6.0",
-        "vizir/laravel-keycloak-web-guard": "^3.0",
-        "mlocati/ip-lib": "^1"
+        "vizir/laravel-keycloak-web-guard": "^3.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.13",
