--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -157,6 +157,10 @@ spec:
           env:
           - name: APP_ENV
             value: {{ .Values.environment }}
+          - name: REDIS_HOST
+            value: 127.0.0.1
+          - name: REDIS_PORT
+            value: 6379
           volumeMounts:
           - name: secrets
             mountPath: /metager/metager_app/.env
