--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -52,6 +52,10 @@ spec:
             value: {{ .Values.environment }}
           - name: APP_URL
             value: {{ .Values.app_url }}
+          - name: REDIS_HOST
+            value: "127.0.0.1"
+          - name: REDIS_PORT
+            value: "6379"
           volumeMounts:
           - name: secrets
             mountPath: /metager/metager_app/.env
