Upgrade to Laravel 11

--- a/metager/.env.example
+++ b/metager/.env.example
@@ -3,6 +3,7 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 LOG_CHANNEL=stderr
 APP_KEY=
+APP_TIMEZONE=Europe/Berlin
 APP_URL=http://nginx:8080
 
 BOT_PROTECTION=true
@@ -21,7 +22,8 @@ REDIS_RESULT_CONNECTION=default
 REDIS_RESULT_CACHE_DURATION=60
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=redis
+CACHE_STORE=redis
+CACHE_PREFIX=metager:
 FILESYSTEM_DISK=local
 SESSION_DRIVER=file
 QUEUE_CONNECTION=sync
