--- a/metager/composer.json
+++ b/metager/composer.json
@@ -8,33 +8,32 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^8.1",
-        "endroid/qr-code": "^4.8",
-        "globalcitizen/php-iban": "^4.1.0",
+        "php": "^8.2",
+        "laravel/framework": "^11.0",
+        "laravel/tinker": "^2.9",
+        "endroid/qr-code": "^5.0",
+        "globalcitizen/php-iban": "^4.2.3",
         "jenssegers/agent": "^2.6.4",
-        "laravel/framework": "^10.10",
-        "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8",
-        "mcamara/laravel-localization": "1.8.0",
-        "mews/captcha": "^3.3.2",
-        "mlocati/ip-lib": "^1",
+        "laravel/sanctum": "^4.0",
+        "mcamara/laravel-localization": "2.0.1",
+        "mews/captcha": "^3.3.3",
+        "mlocati/ip-lib": "^1.18",
         "predis/predis": "^2.2",
-        "promphp/prometheus_client_php": "^2.7.1",
-        "smhg/sepa-qr-data": "^1.2",
-        "symfony/dom-crawler": "^6.0",
-        "vizir/laravel-keycloak-web-guard": "^3.0"
+        "promphp/prometheus_client_php": "^2.10",
+        "smhg/sepa-qr-data": "^2.0",
+        "vizir/laravel-keycloak-web-guard": "^4.0"
     },
     "require-dev": {
-        "barryvdh/laravel-ide-helper": "^2.13",
-        "fakerphp/faker": "^1.9.1",
-        "laravel/dusk": "^7.8",
-        "laravel/pint": "^1.0",
-        "laravel/sail": "^1.18",
-        "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^7.0",
-        "php-webdriver/webdriver": "^1.12.1",
-        "phpunit/phpunit": "^10.1",
-        "spatie/laravel-ignition": "^2.0"
+        "fakerphp/faker": "^1.23",
+        "barryvdh/laravel-ide-helper": "^3.0",
+        "laravel/dusk": "^8.0",
+        "laravel/pint": "^1.13",
+        "laravel/sail": "^1.26",
+        "mockery/mockery": "^1.6",
+        "nunomaduro/collision": "^8.0",
+        "phpunit/phpunit": "^11.0.1",
+        "php-webdriver/webdriver": "^1.15.1",
+        "spatie/laravel-ignition": "^2.4"
     },
     "autoload": {
         "psr-4": {
@@ -60,7 +59,9 @@
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
-            "@php artisan key:generate --ansi"
+            "@php artisan key:generate --ansi",
+            "@php -r \"file_exists('database/database.sqlite') || touch('database/database.sqlite');\"",
+            "@php artisan migrate --graceful --ansi"
         ]
     },
     "extra": {
