--- a/metager/.env.example
+++ b/metager/.env.example
@@ -30,6 +30,7 @@ QUEUE_CONNECTION=sync
 SESSION_LIFETIME=120
 
 REDIS_CACHE_CONNECTION=cache
+REDIS_CACHE_LOCK_CONNECTION=cache
 REDIS_CACHE_HOST=redis
 REDIS_HOST=redis
 REDIS_PASSWORD=null
