--- a/metager/composer.json
+++ b/metager/composer.json
@@ -9,12 +9,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "laravel/framework": "^11.0",
-        "laravel/tinker": "^2.9",
         "endroid/qr-code": "^5.0",
         "globalcitizen/php-iban": "^4.2.3",
         "jenssegers/agent": "^2.6.4",
+        "laravel/framework": "^11.0",
         "laravel/sanctum": "^4.0",
+        "laravel/tinker": "^2.9",
+        "matomo/device-detector": "^6.3",
         "mcamara/laravel-localization": "2.0.1",
         "mews/captcha": "^3.3.3",
         "mlocati/ip-lib": "^1.18",
