--- a/metager/.env.example
+++ b/metager/.env.example
@@ -25,9 +25,13 @@ BROADCAST_DRIVER=log
 CACHE_STORE=redis
 CACHE_PREFIX=metager:
 FILESYSTEM_DISK=local
-SESSION_DRIVER=file
 QUEUE_CONNECTION=sync
+
+SESSION_DRIVER=redis
+SESSION_CONNECTION=cache
 SESSION_LIFETIME=120
+SESSION_COOKIE=metager_session
+SESSION_ENCRYPT=true
 
 REDIS_CACHE_CONNECTION=cache
 REDIS_CACHE_LOCK_CONNECTION=cache
