--- a/metager/composer.json
+++ b/metager/composer.json
@@ -11,6 +11,7 @@
         "php": "^8.2",
         "endroid/qr-code": "^5.0",
         "globalcitizen/php-iban": "^4.2.3",
+        "invoiceninja/sdk-php": "^1.1",
         "jenssegers/agent": "^2.6.4",
         "laravel/framework": "^11.0",
         "laravel/sanctum": "^4.0",
