correct place for additional environment variables

--- a/.gitlab/development.yaml
+++ b/.gitlab/development.yaml
@@ -26,3 +26,15 @@ resources:
     redis:
       cpu: 100m
       memory: 1Gi
+
+env:
+  - name: DB_CONNECTION
+    value: sqlite
+  - name: REDIS_CACHE_CONNECTION
+    value: default
+  - name: REDIS_CACHE_LOCK_CONNECTION
+    value: default
+  - name: REDIS_SESSION_CONNECTION
+    value: default
+  - name: SESSION_CONNECTION
+    value: default
