--- a/.gitlab/development.yaml
+++ b/.gitlab/development.yaml
@@ -28,13 +28,8 @@ resources:
       memory: 1Gi
 
 env:
-  - name: DB_CONNECTION
-    value: sqlite
-  - name: REDIS_CACHE_CONNECTION
-    value: default
-  - name: REDIS_CACHE_LOCK_CONNECTION
-    value: default
-  - name: REDIS_SESSION_CONNECTION
-    value: default
-  - name: SESSION_CONNECTION
-    value: default
+  DB_CONNECTION: sqlite
+  REDIS_CACHE_CONNECTION: default
+  REDIS_CACHE_LOCK_CONNECTION: default
+  REDIS_SESSION_CONNECTION: default
+  SESSION_CONNECTION: default
