update secret name

--- a/.gitlab/development.yaml
+++ b/.gitlab/development.yaml
@@ -7,7 +7,7 @@ ingress:
   tls:
     - hosts:
         - metager3.de
-
+      secretName: development-auto-deploy-tls
 resources:
   requests:
     fpm:
