set password for redis sentinel cache

--- a/metager/.env.example
+++ b/metager/.env.example
@@ -35,7 +35,7 @@ SESSION_ENCRYPT=true
 
 REDIS_CACHE_CONNECTION=default
 REDIS_CACHE_LOCK_CONNECTION=cache
-REDIS_HOST=default
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
