--- a/.gitlab/review.yaml
+++ b/.gitlab/review.yaml
@@ -16,7 +16,7 @@ autoscaling:
 
 env:
   DB_CONNECTION: sqlite
-  #REDIS_CACHE_CONNECTION: default
-  #REDIS_CACHE_LOCK_CONNECTION: default
-  #REDIS_SESSION_CONNECTION: default
-  #SESSION_CONNECTION: default
+  REDIS_CACHE_CONNECTION: default
+  REDIS_CACHE_LOCK_CONNECTION: default
+  REDIS_SESSION_CONNECTION: default
+  SESSION_CONNECTION: default
