--- a/metager/composer.json
+++ b/metager/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^8.2",
         "endroid/qr-code": "^5.0",
+        "foroco/php-browser-detection": "^2.8",
         "globalcitizen/php-iban": "^4.2.3",
         "invoiceninja/sdk-php": "^1.1",
         "jenssegers/agent": "^2.6.4",
