--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -69,6 +69,9 @@ spec:
             mountPath: /metager/metager_app/config/sumas.json
             subPath: SUMAS_JSON
           - name: secrets
+            mountPath: /metager/metager_app/config/suggestions.json
+            subPath: SUGGESTIONS
+          - name: secrets
             mountPath: /metager/metager_app/config/blacklistDomains.txt
             subPath: BLACKLIST_DOMAINS
           - name: secrets
