--- a/metager/package.json
+++ b/metager/package.json
@@ -18,6 +18,7 @@
     "postcss": "^8.4.38"
   },
   "dependencies": {
+    "@paypal/paypal-js": "^8.2.0",
     "chart.js": "^4.4.2",
     "es6-promise": "^4.2.8",
     "fetch-ie8": "^1.5.0",
