prepare cost calculations  and increase request timeouts

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ metager/_ide_helper.php
 metager/.phpstorm.meta.php
 metager/config/sumasEn.json
 metager/config/suggestions.json
+metager/.env.assistant
