--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -66,6 +66,10 @@ spec:
             subPath: ENV_PRODUCTION
             readOnly: true
           - name: secrets
+            mountPath: /metager/metager_app/.env.assistant
+            subPath: ENV_ASSISTANT
+            readOnly: true
+          - name: secrets
             mountPath: /metager/metager_app/config/sumas.json
             subPath: SUMAS_JSON
           - name: secrets
@@ -139,6 +143,10 @@ spec:
             mountPath: /metager/metager_app/.env
             subPath: ENV_PRODUCTION
             readOnly: true
+          - name: secrets
+            mountPath: /metager/metager_app/.env.assistant
+            subPath: ENV_ASSISTANT
+            readOnly: true
           - name: mglogs-persistent-storage
             mountPath: /metager/metager_app/storage/metager
             readOnly: false
@@ -188,6 +196,10 @@ spec:
           - name: secrets
             mountPath: /metager/metager_app/.env
             subPath: ENV_PRODUCTION
+            readOnly: true
+          - name: secrets
+            mountPath: /metager/metager_app/.env.assistant
+            subPath: ENV_ASSISTANT
             readOnly: true
           ports:
             - name: http
