implement websocket base

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,7 @@ services:
     restart: unless-stopped
     depends_on:
       - fpm
+      - reverb
     networks:
       - metager
     volumes:
@@ -68,6 +69,24 @@ services:
       - ./metager:/metager/metager_app
     healthcheck:
       test: "curl -f http://nginx:8080/health-check/liveness-worker"
+  reverb:
+    image: metager:latest
+    build:
+      context: ./
+      dockerfile: build/fpm/Dockerfile
+      target: ${APP_ENV}
+    pull_policy: never
+    restart: unless-stopped
+    entrypoint: /usr/local/bin/php
+    command: artisan reverb:start --debug
+    networks:
+      - metager
+    volumes:
+      - ./metager:/metager/metager_app
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    healthcheck:
+      test: ["CMD", "pgrep",  "-f", "reverb:start"]
   selenium_standalone_firefox:
     image: ${SELENIUM_IMAGE}
     restart: always
