--- a/metager/composer.json
+++ b/metager/composer.json
@@ -16,6 +16,7 @@
         "invoiceninja/sdk-php": "^1.1",
         "jenssegers/agent": "^2.6.4",
         "laravel/framework": "^11.0",
+        "laravel/reverb": "^1.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "matomo/device-detector": "^6.3",
