--- a/metager/package.json
+++ b/metager/package.json
@@ -10,12 +10,14 @@
     "production": "mix --production"
   },
   "devDependencies": {
+    "laravel-echo": "^2.1.6",
     "laravel-mix": "^6.0.49",
     "laravel-mix-polyfill": "^3.0.1",
     "less": "^4.2.0",
     "less-loader": "^10.2.0",
     "lodash": "^4.17.21",
-    "postcss": "^8.4.38"
+    "postcss": "^8.4.38",
+    "pusher-js": "^8.4.0"
   },
   "dependencies": {
     "@paypal/paypal-js": "^8.2.0",
