shorten release names for review apps

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ workflow:
       variables:
         APP_URL: "https://${DOCKER_IMAGE_TAG_PREFIX}.review.metager.de"
         APP_ENV: development
-        DOCKER_IMAGE_TAG_PREFIX: $CI_COMMIT_REF_SLUG
+        DOCKER_IMAGE_TAG_PREFIX: $CI_MERGE_REQUEST_IID
         DOCKER_COMPOSER_IMAGE_TAG: $DOCKER_IMAGE_TAG_PREFIX-composer-$CI_COMMIT_SHA
         DOCKER_FPM_IMAGE_TAG: $DOCKER_IMAGE_TAG_PREFIX-$CI_COMMIT_SHA
         DOCKER_NGINX_IMAGE_TAG: $DOCKER_IMAGE_TAG_PREFIX-$CI_COMMIT_SHA
