readd deployment stage ro review apps

--- a/.gitlab/ci/deploy.yml
+++ b/.gitlab/ci/deploy.yml
@@ -48,28 +48,29 @@ deploy_review:
   extends:
     - .deploy
   environment:
-    name: review/$CI_COMMIT_REF_SLUG
-    url: "https://${CI_COMMIT_REF_SLUG}.review.metager.de"
+    name: review/$CI_MERGE_REQUEST_IID
+    url: "https://${CI_MERGE_REQUEST_IID}.review.metager.de"
     action: start
     on_stop: stop_review
     auto_stop_in: 2 days
   variables:
-    DEPLOYMENT_URL: "${CI_COMMIT_REF_SLUG}.review.metager.de"
+    DEPLOYMENT_URL: "${CI_MERGE_REQUEST_IID}.review.metager.de"
     DEPLOYMENT_HELM_VALUES: .gitlab/review.yaml
-    DEPLOYMENT_CHART_NAME: review-${CI_COMMIT_REF_SLUG}
+    DEPLOYMENT_CHART_NAME: review-${CI_MERGE_REQUEST_IID}
+    BRANCH_NAME: $CI_MERGE_REQUEST_SOURCE_BRANCH_NAME
   rules:
-    - if: '$CI_COMMIT_BRANCH == "master" || $CI_COMMIT_BRANCH == "development"'
+    - if: '$CI_MERGE_REQUEST_SOURCE_BRANCH_NAME == "master" || $CI_MERGE_REQUEST_SOURCE_BRANCH_NAME == "development"'
       when: never
-    - if: "$CI_COMMIT_TAG || $CI_COMMIT_BRANCH"
+    - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
 
 stop_review:
   stage: deploy
   image: $DEPLOY_KUBERNETES_IMAGE
   environment:
-    name: review/$CI_COMMIT_REF_SLUG
+    name: review/$CI_MERGE_REQUEST_IID
     action: stop
   variables:
-    DEPLOYMENT_CHART_NAME: review-${CI_COMMIT_REF_SLUG}
+    DEPLOYMENT_CHART_NAME: review-${CI_MERGE_REQUEST_IID}
     KEEP_N: 0 # Environment gets deleted. No Image Tags to keep
     FPM_REPOSITORY_ID: 418
     NGINX_REPOSITORY_ID: 416
@@ -81,6 +82,6 @@ stop_review:
     - .gitlab/deployment_scripts/delete_deployment.sh
   when: manual
   rules:
-    - if: '$CI_COMMIT_BRANCH == "master" || $CI_COMMIT_BRANCH == "development"'
+    - if: '$CI_MERGE_REQUEST_SOURCE_BRANCH_NAME == "master" || $CI_MERGE_REQUEST_SOURCE_BRANCH_NAME == "development"'
       when: never
-    - if: "$CI_COMMIT_TAG || $CI_COMMIT_BRANCH"
+    - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
