add correct websocket hostname

--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -53,6 +53,8 @@ spec:
             value: {{ .Release.Name}}-redis-master.metager-2.svc.cluster.local
           - name: REDIS_PORT
             value: "6379"
+          - name: REVERB_HOST
+            value: {{ .Values.ingress.hosts[0].host}}
           {{- range $name, $value := .Values.env }}
           - name: {{ $name }}
             value: {{ $value }}
@@ -127,6 +129,8 @@ spec:
             value: {{ .Release.Name}}-redis-master.metager-2.svc.cluster.local
           - name: REDIS_PORT
             value: "6379"
+          - name: REVERB_HOST
+            value: {{ .Values.ingress.hosts[0].host}}
           {{- range $name, $value := .Values.env }}
           - name: {{ $name }}
             value: {{ $value }}
@@ -177,6 +181,8 @@ spec:
             value: {{ .Release.Name}}-redis-master.metager-2.svc.cluster.local
           - name: REDIS_PORT
             value: "6379"
+          - name: REVERB_HOST
+            value: {{ .Values.ingress.hosts[0].host}}
           {{- range $name, $value := .Values.env }}
           - name: {{ $name }}
             value: {{ $value }}
@@ -220,6 +226,8 @@ spec:
             value: {{ .Release.Name}}-redis-master.metager-2.svc.cluster.local
           - name: REDIS_PORT
             value: "6379"
+          - name: REVERB_HOST
+            value: {{ .Values.ingress.hosts[0].host}}
           {{- range $name, $value := .Values.env }}
           - name: {{ $name }}
             value: {{ $value }}
