--- a/.gitlab/ci/build_docker_images.yml
+++ b/.gitlab/ci/build_docker_images.yml
@@ -62,9 +62,9 @@ cleanup_revision_images_review:
     action: prepare
     auto_stop_in: 2 days
   rules:
-    - if: '$CI_COMMIT_BRANCH == "master" || $CI_COMMIT_BRANCH == "development"'
+    - if: '$CI_MERGE_REQUEST_SOURCE_BRANCH_NAME == "master" || $CI_MERGE_REQUEST_SOURCE_BRANCH_NAME == "development"'
       when: never
-    - if: "$CI_COMMIT_TAG || $CI_COMMIT_BRANCH"
+    - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
 
 cleanup_revision_images_development:
   extends:
