--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -204,22 +204,24 @@ spec:
             mountPath: /metager/metager_app/.env
             subPath: ENV_PRODUCTION
             readOnly: true
-          ports:
-            - name: http
-              containerPort: 8080
-              protocol: TCP
           livenessProbe:
-            httpGet:
-              path: /health-check/liveness-worker
-              port: http
+            exec:
+              command:
+              - pgrep
+              - -f
+              - requests:fetcher
           readinessProbe:
-            httpGet:
-              path: /health-check/liveness-worker
-              port: http
+            exec:
+              command:
+              - pgrep
+              - -f
+              - requests:fetcher
           startupProbe:
-            httpGet:
-              path: /health-check/liveness-worker
-              port: http
+            exec:
+              command:
+              - pgrep
+              - -f
+              - requests:fetcher
           resources:
             requests:
               {{- toYaml .Values.resources.requests.worker | nindent 14 }}
