--- a/.gitlab/development.yaml
+++ b/.gitlab/development.yaml
@@ -25,10 +25,9 @@ resources:
     redis:
       cpu: 100m
       memory: 1Gi
-
-env:
-  DB_CONNECTION: sqlite
-  REDIS_CACHE_CONNECTION: default
-  REDIS_CACHE_LOCK_CONNECTION: default
-  REDIS_SESSION_CONNECTION: default
-  SESSION_CONNECTION: default
+#env:
+#  DB_CONNECTION: sqlite
+#  REDIS_CACHE_CONNECTION: default
+#  REDIS_CACHE_LOCK_CONNECTION: default
+#  REDIS_SESSION_CONNECTION: default
+#  SESSION_CONNECTION: default
