--- a/.gitlab/development.yaml
+++ b/.gitlab/development.yaml
@@ -22,9 +22,9 @@ resources:
     nginx:
       cpu: 100m
       memory: 100M
-    redis:
-      cpu: 100m
-      memory: 1Gi
+    reverb:
+      cpu: 50m
+      memory: 100M
 env:
   DB_CONNECTION: sqlite
   REDIS_CACHE_CONNECTION: default
