--- a/metager/.env.example
+++ b/metager/.env.example
@@ -22,7 +22,7 @@ BROADCAST_DRIVER=log
 CACHE_STORE=redis
 CACHE_PREFIX=metager:
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=redis
 
 SESSION_DRIVER=redis
 SESSION_CONNECTION=default
